# terminus

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh  termbot.example.toml  terminus.example.toml
.github/workflows/: ci.yml  release.yml
docs/: claude.md  codex.md  discord-parity.md  feature-flags.md  gemini.md  opencode.md  slack-parity.md  socket.md
src/: app.rs  banner.rs  buffer.rs  claude.rs  command.rs  command_router.rs  config.rs  delivery.rs  harness_registry.rs  lib.rs  main.rs  session.rs  state_persistor.rs  state_store.rs  tmux.rs  wake.rs
src/chat_adapters/: discord.rs  mod.rs  slack.rs  telegram.rs
src/harness/: claude.rs  codex.rs  gemini.rs  mod.rs  opencode.rs
src/platform/: mod.rs  slack.rs  telegram.rs
src/power/: fake.rs  gap_detector.rs  linux.rs  macos.rs  mod.rs  policy.rs  supervisor.rs  types.rs
src/socket/: config_watcher.rs  connection.rs  envelope.rs  events.rs  mod.rs  rate_limit.rs  subscription.rs
src/structured_output/: mod.rs  queue.rs  registry.rs  secret.rs  webhook.rs  worker.rs
tests/: sleep_wake_banner.rs  socket_lifecycle.rs  state_persistence_under_load.rs
tests/common/: fixtures.rs  mocks.rs
