[package]
name = "termbot"
version = "0.1.0"
edition = "2021"
description = "Control terminal sessions from Telegram and Slack"

[workspace]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
regex = "1"
teloxide = { version = "0.13", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
async-trait = "0.1"
serde_json = "1"
futures-util = "0.3"
url = "2"
thiserror = "1"
claude-agent-sdk-rust = { version = "1", features = ["tracing-support"] }
futures = "0.3"
