[package]
name = "terminus"
version = "0.1.0"
edition = "2021"
description = "Control terminal sessions from Telegram/Slack/Discord with structured-output automation"

[workspace]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
regex = "1"
teloxide = { version = "0.13", default-features = false, features = ["macros", "native-tls", "ctrlc_handler"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
async-trait = "0.1"
serde_json = "1"
futures-util = "0.3"
thiserror = "1"
claude-agent-sdk-rust = { version = "1", default-features = false, features = ["tracing-support"] }
openssl = { version = "0.10", features = ["vendored"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
tempfile = "3"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
ulid = "1"
wiremock = { version = "0.6", optional = true }
# native_tls_backend avoids the vulnerable rustls-webpki 0.102.8 (RUSTSEC-2026-0049)
# that rustls_backend pulls via tokio-tungstenite 0.21 → rustls 0.22.
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "native_tls_backend", "model", "cache"] }

[dev-dependencies]
# Serialize tests that mutate process-global env vars (std::env::set_var is
# unsafe under parallel test execution in Rust 2024 edition and can race under
# the 2021 default runner).
serial_test = "3"

[features]
integration-tests = ["dep:wiremock"]
