[package]
name = "terminus"
version = "0.1.0"
edition = "2021"
description = "Control terminal sessions from Telegram/Slack/Discord with structured-output automation"

[workspace]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
regex = "1"
teloxide = { version = "0.13", default-features = false, features = ["macros", "native-tls", "ctrlc_handler"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"], optional = true }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
async-trait = "0.1"
serde_json = "1"
futures-util = "0.3"
thiserror = "1"
claude-agent-sdk-rust = { version = "1", default-features = false, features = ["tracing-support"] }
openssl = { version = "0.10", features = ["vendored"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
tempfile = "3"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
ulid = "1"
tokio-util = { version = "0.7", features = ["rt"] }
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
arc-swap = "1"
wiremock = { version = "0.6", optional = true }
# native_tls_backend avoids the vulnerable rustls-webpki 0.102.8 (RUSTSEC-2026-0049)
# that rustls_backend pulls via tokio-tungstenite 0.21 → rustls 0.22.
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "native_tls_backend", "model", "cache"], optional = true }

[dev-dependencies]
# Serialize tests that mutate process-global env vars (std::env::set_var is
# unsafe under parallel test execution in Rust 2024 edition and can race under
# the 2021 default runner). Also used by the socket lifecycle integration
# tests to avoid ephemeral-port TOCTOU races between parallel test binaries.
serial_test = "3"
# `test-util` enables `tokio::time::pause`/`advance` and the `start_paused`
# attribute argument used by the sleep/wake banner ack-timeout test. Pulled
# only into the test profile so the production binary doesn't ship the
# mock-time machinery.
tokio = { version = "1", features = ["test-util"] }

[features]
default = ["telegram", "slack", "discord", "socket"]
telegram = ["dep:teloxide"]
slack = ["dep:tokio-tungstenite"]
discord = ["dep:serenity"]
socket = ["dep:tokio-tungstenite"]
integration-tests = ["dep:wiremock"]
